# observation-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  threat-model.md
observation_extractor/: NOTICES  main.py
observation_extractor/examples/: auto-accident.txt  cardiac-care.txt  example-questions.txt  real-estate-transactions.txt
observation_extractor/filters/: negatives.py
observation_extractor/ingestors/: pdf.py
observation_extractor/model/: boolean.py
observation_extractor/writers/: csv.py  dynamodb.py
observer/: main.py
observer/examples/: racing-rules.txt
observer/filters/: negatives.py
observer/ingestors/: pdf.py
observer/model/: boolean.py  observations.py
observer/writers/: csv.py  dynamodb.py  parquet.py
